--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           sed -i "s/Version: .*/Version: $TAG_NAME/" PantheonSecretsExplorer.php
 
       - name: Create release archive
-        run: zip -r release.zip . -x "*.git*"
+        run: zip -r pantheon-secrets-explorer.zip . -x "*.git*"
 
       - name: Release
         uses: softprops/action-gh-release@v1
